# Laboratorio_SO1_1S2024

./: README.md
Clase 11/Clase11Rust/app-cliente/: Cargo.toml
Clase 11/Clase11Rust/app-servidor/: Cargo.toml
Clase 11/HPA/api/: dockerfile  package-lock.json
Clase 11/RUST/: notas.txt
Clase1/: clase1.md
Clase11/: .md
Clase11/Clase11Rust/: comandos.md  docker-compose.yaml
Clase11/Clase11Rust/app-cliente/: Cargo.toml  dockerfile
Clase11/Clase11Rust/app-cliente/src/: main.rs
Clase11/HPA/: .txt
Clase2/: clase2.md
Clase2/Ejemplo_Clase2/: docker-compose.yaml
Clase2/Ejemplos YAML/: ejemplo1.yml  ejemplo2.yml  modelo.yml
Clase3/: .json  Clase3.md
Clase3/Ejemplo/: notas.txt
Clase4/: fork.c
Clase4/api/: main.go  prueba1
Clase5/: Mysql.md  dc.txt  docker-compose.yaml  instalar_docker_Ubuntu20,04.md
Clase5/GO_Mysql/: ayuda.txt  docker-compose.yml
Clase5/backend/: dockerfile  package-lock.json  package.json
Clase6/: clase6.md
Clase6/DIagrama_Estados/: docker-compose.yaml
Clase6/Ejemplo/: docker-compose.yaml
Clase7/: Clase7.md
Clase7/contador/: api.go  go.mod
Clase7/listas/: go.sum  main.go
Clase8/: clase8.md
Clase8/Ejemplo/: app.yml  basic-ingress.yml  namespace.yml  service.yml
Clase8/EjemploDB/: basemysql.yml
Clase8/plantillas/: deployment.yaml  ingress.yml  pod.yml
Clase9/: Clase9.md  docker-compose.yaml
Clase9/MYSQL/: script.sql
Clase9/cliente/: cliente.go  dockerfile  go.mod  go.sum
Clase9/locust/: traffic.json  traffic.py
Clase9/servidor/: dockerfile  go.mod  go.sum  servidor.go
Manual_Proyecto2/: GUIA.md
(+84 files in other folders)
